--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-backup": "^8.3",
         "spatie/laravel-permission": "^5.10"
     },
