--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-backup": "^8.3",
+        "spatie/laravel-medialibrary": "*",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
